--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,8 @@
     <title>AI</title>
 </head>
 <body>
-    <sript>
-        window.location.href = "https://app.droxy.ai/guest-agent/672384d608cbd0204e882a3d";
-    </script>
+<script>
+    window.location.href = "https://app.droxy.ai/guest-agent/672384d608cbd0204e882a3d";
+</script>
 </body>
 </html>
